--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
 	"name": "V2ness",
 	"description": "Deploy V2ness on Heroku.",
-	"keywords": ["V2Ray"],
+	"keywords": ["V2ness"],
 	"env": {
 		"UUID": {
-			"description": "V2Ray UUID",
+			"description": "V2ness UUID",
 			"value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
 		}
 	},
